[gd_scene load_steps=7 format=3 uid="uid://bf7f6kv02vipi"]

[ext_resource type="Script" path="res://scenes/hud/components/item_info.gd" id="1_gkd7v"]
[ext_resource type="FontFile" uid="uid://cjg2va2gx341j" path="res://assets/fonts/nippo/OTF/Nippo-Regular.otf" id="2_ui6pw"]
[ext_resource type="Texture2D" uid="uid://u68l1bngaa7u" path="res://assets/hud/ck_3_bar.svg" id="3_2phnt"]
[ext_resource type="FontFile" uid="uid://pxyfff4ijb64" path="res://assets/fonts/nippo/OTF/Nippo-Medium.otf" id="5_0enwk"]
[ext_resource type="FontFile" uid="uid://bkvompws14vh5" path="res://assets/fonts/hind/Hind-Regular.ttf" id="6_n3jf5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_470qu"]
bg_color = Color(0.129412, 0.129412, 0.129412, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ItemDescription" type="VBoxContainer"]
offset_right = 393.0
offset_bottom = 598.0
theme_override_constants/separation = 0
script = ExtResource("1_gkd7v")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ui6pw")
theme_override_font_sizes/font_size = 32
text = "Item-Info"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_constants/separation = 0

[node name="Ck3ProgressBar" type="TextureProgressBar" parent="HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 60.0
fill_mode = 4
texture_progress = ExtResource("3_2phnt")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_right = 10

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_bottom = 40

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ItemNameLabel" type="Label" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("5_0enwk")
theme_override_font_sizes/font_size = 20
text = "Regenmantel"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ItemDescriptionLabel" type="RichTextLabel" parent="HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 127)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/line_separation = -2
theme_override_fonts/normal_font = ExtResource("6_n3jf5")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Die Jacke erhöht die physische Schadensreduktion erheblich, sodass der Spieler Angriffen von Gegnern länger standhalten kann. Sie ist besonders effektiv gegen Projektil-Angriffe wie Pfeile oder Kugeln."

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_bottom = 30

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 206)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_470qu")

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="StatVBox" type="VBoxContainer" parent="PanelContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0
